<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

class CreateUsersTable extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id();
            $table->string('user_name');
            $table->enum('gender',['male','female','other']);
            $table->enum('user_status',['active','banned'])->default('active');;
            $table->string('email')->unique();
            $table->timestamp('email_verified_at')->nullable();
            $table->string('date_of_birth');
            $table->string('phone')->nullable();
            $table->integer('user_role_id');
            $table->string('profile_picture')->nullable();
            $table->string('password');
            $table->string('bank_name')->nullable();
            $table->string('account_number')->nullable();
            $table->rememberToken();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('users');
    }
}
